--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -220,7 +220,7 @@
 </p>
 <h3><span id="N.C3.A1stroje_B-Spline"></span><span class="mw-headline" id="N&aacute;stroje_B-Spline">N&aacute;stroje B-Spline</span></h3>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineConvertToNURBS.svg&amp;filetimestamp=20240331101832&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineConvertToNURBS.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineConvertToNURBS.html" title="Sketcher BSplineConvertToNURBS">Geometrie do B-spline</a>: P&#345;ev&aacute;d&iacute; hrany na B-splajny.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineIncreaseDegree.svg&amp;filetimestamp=20240101115116&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineIncreaseDegree.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineIncreaseDegree.html" title="Sketcher BSplineIncreaseDegree">Zv&yacute;&scaron;it stupe&#328; B-spline</a>: Zvy&scaron;uje stupe&#328; (&#345;&aacute;d) B-splajn&#367;.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineIncreaseDegree.svg&amp;filetimestamp=20240101115116&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineIncreaseDegree.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineIncreaseDegree.html" title="Sketcher BSplineIncreaseDegree">Zv&yacute;&scaron;it stupe&#328; B-spline</a>: Zvy&scaron;uje stupe&#328; (&#345;&aacute;d) B-spline.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineDecreaseDegree.svg&amp;filetimestamp=20240101115056&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineDecreaseDegree.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineDecreaseDegree.html" title="Sketcher BSplineDecreaseDegree">Sn&iacute;&#382;en&iacute; stupn&#283; B-spline</a>: Sni&#382;uje stupe&#328; (&#345;&aacute;d) B-spline.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineIncreaseKnotMultiplicity.svg&amp;filetimestamp=20240101115126&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineIncreaseKnotMultiplicity.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineIncreaseKnotMultiplicity.html" title="Sketcher BSplineIncreaseKnotMultiplicity">Increase Knot Multiplicity</a>: Increases the multiplicity of a B-spline knot.</li></ul>
@@ -594,12 +594,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118132959
+Cached time: 20260118133012
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.418 seconds
-Real time usage: 0.975 seconds
+CPU time usage: 0.405 seconds
+Real time usage: 0.564 seconds
 Preprocessor visited node count: 1449/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
@@ -610,19 +610,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  118.944      1 -total
- 23.24%   27.644      1 Template:Sketcher_Tools_navi/cs
- 16.11%   19.161      1 Template:Userdocnavi/cs
- 10.42%   12.400      8 Template:VersionPlus
- 10.11%   12.021      1 Template:PropertyView
-  6.09%    7.242      6 Template:Caption
-  6.01%    7.148     34 Template:Version
-  5.96%    7.095     14 Template:KEY
-  5.79%    6.889      2 Template:Docnav
-  5.52%    6.561      2 Template:Navigation_menu_2
+100.00%   36.484      1 -total
+ 24.68%    9.005      1 Template:Sketcher_Tools_navi/cs
+ 16.05%    5.854      2 Template:Navigation_menu_2
+ 12.77%    4.659      1 Template:Userdocnavi/cs
+ 10.22%    3.730      1 Template:PropertyView
+  7.43%    2.710      2 Template:Docnav
+  7.01%    2.556     34 Template:Version
+  5.94%    2.166      1 Template:Variable
+  5.47%    1.994      5 Template:MenuCommand
+  5.05%    1.842     14 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118132958 and revision id 1740549. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118133011 and revision id 1740551. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
