--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -223,9 +223,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineIncreaseDegree.svg&amp;filetimestamp=20240101115116&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineIncreaseDegree.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineIncreaseDegree.html" title="Sketcher BSplineIncreaseDegree">Zv&yacute;&scaron;it stupe&#328; B-spline</a>: Zvy&scaron;uje stupe&#328; (&#345;&aacute;d) B-spline.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineDecreaseDegree.svg&amp;filetimestamp=20240101115056&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineDecreaseDegree.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineDecreaseDegree.html" title="Sketcher BSplineDecreaseDegree">Sn&iacute;&#382;en&iacute; stupn&#283; B-spline</a>: Sni&#382;uje stupe&#328; (&#345;&aacute;d) B-spline.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineIncreaseKnotMultiplicity.svg&amp;filetimestamp=20240101115126&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineIncreaseKnotMultiplicity.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineIncreaseKnotMultiplicity.html" title="Sketcher BSplineIncreaseKnotMultiplicity">Zv&yacute;&scaron;en&iacute; multiplicity uzl&#367;</a>: Zvy&scaron;uje multiplicitu uzlu B-spline.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineDecreaseKnotMultiplicity.svg&amp;filetimestamp=20240101115106&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineDecreaseKnotMultiplicity.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineDecreaseKnotMultiplicity.html" title="Sketcher BSplineDecreaseKnotMultiplicity">Decrease Knot Multiplicity</a>: Decreases the multiplicity of a B-spline knot.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineDecreaseKnotMultiplicity.svg&amp;filetimestamp=20240101115106&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineDecreaseKnotMultiplicity.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineDecreaseKnotMultiplicity.html" title="Sketcher BSplineDecreaseKnotMultiplicity">Sn&iacute;&#382;en&iacute; multiplicity uzl&#367;</a>: Sni&#382;uje multiplicitu uzlu B-spline.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineInsertKnot.svg&amp;filetimestamp=20240513165934&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineInsertKnot.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineInsertKnot.html" title="Sketcher BSplineInsertKnot">Insert Knot</a>: Inserts a knot into a B-spline or increases the multiplicity of an existing knot.</li></ul>
 </div>
@@ -592,13 +590,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118133127
+Cached time: 20260118133224
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.419 seconds
-Real time usage: 0.630 seconds
-Preprocessor visited node count: 1448/1000000
+CPU time usage: 0.467 seconds
+Real time usage: 0.686 seconds
+Preprocessor visited node count: 1447/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -608,19 +606,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   47.300      1 -total
- 21.64%   10.234      1 Template:Sketcher_Tools_navi/cs
- 21.01%    9.938      1 Template:Userdocnavi/cs
- 13.66%    6.462      2 Template:Navigation_menu_2
- 10.93%    5.168      1 Template:PropertyView
-  7.18%    3.394      2 Template:Docnav
-  6.45%    3.051     34 Template:Version
-  5.87%    2.776      8 Template:VersionPlus
-  5.17%    2.446      1 Template:TOCright
-  4.55%    2.150     14 Template:KEY
+100.00%   33.039      1 -total
+ 26.53%    8.765      1 Template:Sketcher_Tools_navi/cs
+ 14.14%    4.672      2 Template:Navigation_menu_2
+ 11.99%    3.960      1 Template:Userdocnavi/cs
+  8.83%    2.917     34 Template:Version
+  8.49%    2.804      1 Template:PropertyView
+  7.06%    2.331      2 Template:Docnav
+  4.94%    1.633      6 Template:Caption
+  4.70%    1.554      5 Template:MenuCommand
+  4.62%    1.528      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118133126 and revision id 1740553. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118133223 and revision id 1740555. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
