--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -225,9 +225,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineIncreaseKnotMultiplicity.svg&amp;filetimestamp=20240101115126&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineIncreaseKnotMultiplicity.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineIncreaseKnotMultiplicity.html" title="Sketcher BSplineIncreaseKnotMultiplicity">Zv&yacute;&scaron;en&iacute; multiplicity uzl&#367;</a>: Zvy&scaron;uje multiplicitu uzlu B-spline.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineDecreaseKnotMultiplicity.svg&amp;filetimestamp=20240101115106&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineDecreaseKnotMultiplicity.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineDecreaseKnotMultiplicity.html" title="Sketcher BSplineDecreaseKnotMultiplicity">Sn&iacute;&#382;en&iacute; multiplicity uzl&#367;</a>: Sni&#382;uje multiplicitu uzlu B-spline.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplineInsertKnot.svg&amp;filetimestamp=20240513165934&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplineInsertKnot.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplineInsertKnot.html" title="Sketcher BSplineInsertKnot">Vlo&#382;it uzel</a>: Vlo&#382;&iacute; uzel do B-spline nebo zv&yacute;&scaron;&iacute; multiplicitu existuj&iacute;c&iacute;ho uzlu.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_JoinCurves.svg&amp;filetimestamp=20240513170116&amp;.html" class="mw-file-description"><img src="../File/Sketcher_JoinCurves.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_JoinCurves.html" title="Sketcher JoinCurves">Join Curves</a>: Creates a B-spline by joining two existing B-splines or other edges. <span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span></li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_JoinCurves.svg&amp;filetimestamp=20240513170116&amp;.html" class="mw-file-description"><img src="../File/Sketcher_JoinCurves.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_JoinCurves.html" title="Sketcher JoinCurves">P&#345;ipojit k&#345;ivky</a>: Vytvo&#345;&iacute; B-spline spojen&iacute;m dvou existuj&iacute;c&iacute;ch B-spline nebo jin&yacute;ch hran. <span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span></li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Visual_Helpers">Visual Helpers</span></h3>
 </div>
@@ -588,13 +586,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118133329
+Cached time: 20260118133510
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.530 seconds
-Real time usage: 1.141 seconds
-Preprocessor visited node count: 1446/1000000
+CPU time usage: 0.493 seconds
+Real time usage: 2.087 seconds
+Preprocessor visited node count: 1445/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -604,19 +602,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   85.781      1 -total
- 23.05%   19.772      1 Template:Sketcher_Tools_navi/cs
- 17.06%   14.635      2 Template:Navigation_menu_2
- 13.68%   11.731      6 Template:Caption
- 11.16%    9.572     34 Template:Version
-  9.84%    8.441      1 Template:Userdocnavi/cs
-  7.33%    6.286      1 Template:PropertyView
-  6.85%    5.877     14 Template:KEY
-  5.51%    4.728      8 Template:VersionPlus
-  4.50%    3.862      2 Template:Docnav
+100.00%  129.026      1 -total
+ 26.31%   33.946      1 Template:Sketcher_Tools_navi/cs
+ 17.60%   22.712      2 Template:Navigation_menu_2
+ 11.08%   14.299      1 Template:Userdocnavi/cs
+  9.05%   11.680     34 Template:Version
+  7.05%    9.097      1 Template:PropertyView
+  6.83%    8.814      8 Template:VersionPlus
+  6.64%    8.571      2 Template:Docnav
+  5.99%    7.729      6 Template:Caption
+  3.92%    5.052      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118133328 and revision id 1740557. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118133508 and revision id 1740559. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
