--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -243,9 +243,9 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_BSplinePoleWeight.svg&amp;filetimestamp=20240101112951&amp;.html" class="mw-file-description"><img src="../File/Sketcher_BSplinePoleWeight.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_BSplinePoleWeight.html" title="Sketcher BSplinePoleWeight">P&#345;epnout v&aacute;hu kontroln&iacute;ho bodu B-spline</a>: Zobraz&iacute; nebo skryje v&aacute;hu kontroln&iacute;ho bodu B-spline ve v&scaron;ech skic&aacute;ch.</li></ul></dd></dl>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_RestoreInternalAlignmentGeometry.svg&amp;filetimestamp=20240101171622&amp;.html" class="mw-file-description"><img src="../File/Sketcher_RestoreInternalAlignmentGeometry.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_RestoreInternalAlignmentGeometry.html" title="Sketcher RestoreInternalAlignmentGeometry">P&#345;epnout vnit&#345;n&iacute; geometrii</a>: Odstran&iacute; vnit&#345;n&iacute; geometrii prvk&#367; nebo znovu vytvo&#345;&iacute; chyb&#283;j&iacute;c&iacute; vnit&#345;n&iacute; geometrii.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_SwitchVirtualSpace.svg&amp;filetimestamp=20231231201841&amp;.html" class="mw-file-description"><img src="../File/Sketcher_SwitchVirtualSpace.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_SwitchVirtualSpace.html" title="Sketcher SwitchVirtualSpace">P&#345;epnout virtu&aacute;ln&iacute; prostor</a>: (od)skryje vazby nebo p&#345;epne viditeln&yacute; virtu&aacute;ln&iacute; prostor.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Obsolete_tools">Obsolete tools</span></h3>
-</div>
+<p><span id="Obsolete_tools"></span>
+</p>
+<h3><span id="Zastaral.C3.A9_n.C3.A1stroje"></span><span class="mw-headline" id="Zastaral&eacute;_n&aacute;stroje">Zastaral&eacute; n&aacute;stroje</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Clone.svg&amp;filetimestamp=20240101115259&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Clone.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Clone.html" title="Sketcher Clone">Clone</a>: Clones a Sketcher element. Not available in <span style="font-size:small;color:green;">1.0 and above</span>.</li></ul>
 </div>
@@ -558,12 +558,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118135858
+Cached time: 20260118135925
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.450 seconds
-Real time usage: 1.127 seconds
+CPU time usage: 0.443 seconds
+Real time usage: 0.753 seconds
 Preprocessor visited node count: 1431/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
@@ -574,19 +574,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  172.348      1 -total
- 15.11%   26.049      1 Template:Sketcher_Tools_navi/cs
- 10.86%   18.714      1 Template:TOCright
- 10.69%   18.417      5 Template:MenuCommand
-  9.47%   16.321      6 Template:Caption
-  8.56%   14.760      2 Template:Navigation_menu_2
-  8.54%   14.715      1 Template:PropertyView
-  6.58%   11.336     34 Template:Version
-  6.24%   10.752      1 Template:Userdocnavi/cs
-  5.04%    8.681      1 Template:Variable
+100.00%   35.722      1 -total
+ 23.45%    8.377      1 Template:Sketcher_Tools_navi/cs
+ 17.76%    6.345      2 Template:Navigation_menu_2
+ 14.39%    5.142      1 Template:Userdocnavi/cs
+  7.79%    2.782      1 Template:PropertyView
+  7.34%    2.621     34 Template:Version
+  7.22%    2.580      2 Template:Docnav
+  5.97%    2.134      6 Template:Caption
+  5.34%    1.907      8 Template:VersionPlus
+  5.23%    1.868     14 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118135857 and revision id 1740589. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118135924 and revision id 1740591. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
